# soccermcp

./: .dockerignore  Dockerfile  README.md  scripts.sh  soccer_mcp.py
function/: main.py  requirements.txt
n8n/: Dockerfile.n8n  n8n_build.yaml
soccer-mcp/: pyproject.toml  soccer_mcp.py  soccermcp_build.yaml
