[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soccer-analytics-pro"
version = "0.1.0"
description = "A FastMCP server for soccer analytics."
requires-python = ">=3.8"

dependencies = [
    "fastmcp",
    "soccerdata",
    "pandas",
    "tabulate",
    "uvicorn",
    "starlette",
    "mcp"
]
